src/assets/css/style.scss
/*!
 * Name    : Visual Portfolio
 * Version : @@plugin_version
 * Author  : nK https://nkdev.info
 */
.vp-portfolio {
    position: relative;
    min-height: 114px;
}
.vp-portfolio,
.vp-portfolio * {
    box-sizing: border-box;
}
.vp-portfolio__items {
    transition: .3s height ease-in-out, .3s transform ease-in-out;
    will-change: height, transform;
}

.vp-portfolio::after,
.vp-portfolio__items::after {
    content: "";
    display: block;
    clear: both;
}

.vp-portfolio__items-wrap,
.vp-portfolio__filter-wrap,
.vp-portfolio__pagination-wrap,
.vp-portfolio__item {
    position: relative;
    overflow: hidden;
}
.vp-portfolio__items-wrap,
.vp-portfolio__filter-wrap,
.vp-portfolio__pagination-wrap {
    visibility: hidden;
    opacity: 0;
    transition: .3s opacity, .3s visibility;
    will-change: opacity, visibility;
}

.vp-portfolio__item-wrap {
    position: relative;
    float: left;
    width: 33.333%;
}
.vp-portfolio__item .vp-portfolio__item-img img,
.vp-portfolio__item .vp-portfolio__item-img a {
    display: block;
    width: 100%;
    height: auto;
}
.vp-portfolio__item-img {
    position: relative;
}

// figures
.vp-portfolio figure.vp-portfolio__item {
    margin: 0;
}
[class^="wp-block-"]:not(.wp-block-gallery) figcaption.vp-portfolio__item-meta,
.vp-portfolio figcaption.vp-portfolio__item-meta {
    margin-bottom: 0;
    font-style: inherit;
}

// Preloader
.vp-portfolio__preloader-wrap {
    visibility: visible;
    opacity: 1;
    transition: .3s opacity, .3s visibility;
    will-change: opacity, visibility;
}
.vp-portfolio__preloader {
    position: absolute;
    left: 50%;
    width: 23px;
    height: 24px;
    margin-top: 45px;
    margin-left: -11px;
    animation: vp-preloader 2s linear infinite;

    span {
        position: absolute;
        display: block;
        top: 0;
        left: 0;
        width: 10px;
        height: 7px;
        background-color: #8a8a8a;

        &:nth-of-type(1) {
            height: 14px;
        }
        &:nth-of-type(2) {
            left: 12px;
        }
        &:nth-of-type(3) {
            top: 16px;
        }
        &:nth-of-type(4) {
            top: 9px;
            left: 12px;
            height: 14px;
        }
    }
}

@keyframes vp-preloader {
    0%,
    100% {
        opacity: .5;
    }
    40%,
    60% {
        opacity: 1;
    }
}

// Tiles
[data-vp-layout="tiles"] {
    .vp-portfolio__item-img img,
    .vp-portfolio__item-img {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
    }
    .vp-portfolio__item-img-wrap {
        position: relative;
        display: block;
        overflow: hidden;

        &::before {
            content: "";
            display: block;
            margin-top: 56%;
        }
    }
    .vp-portfolio__item-img img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: 50% 50%;
        // stylelint-disable-next-line
        font-family: "object-fit: cover; object-position: 50% 50%;";
    }
}

// Justified
[data-vp-layout="justified"] {
    .vp-portfolio__items {
        transition: .2s height ease-in-out;
        will-change: height;
    }
    .vp-portfolio__item-wrap {
        float: left;
        top: 0;
        left: 0;
        transition: .2s transform ease-in-out, .2s width ease-in-out, .2s height ease-in-out;
        will-change: transform, width, height;
    }
}

// Slider
[data-vp-layout="slider"] {
    .vp-portfolio__item-wrap {
        float: none;
        width: auto;
    }
    .vp-portfolio__item-img-wrap {
        position: relative;
        display: block;
        overflow: hidden;
    }
    .vp-portfolio__item-img-wrap::before {
        content: "";
        display: block;
    }
    .vp-portfolio__item-img img {
        object-fit: cover;
        object-position: 50% 50%;
        // stylelint-disable-next-line
        font-family: "object-fit: cover; object-position: 50% 50%;";
    }

    // arrows
    .vp-portfolio__items-arrow {
        position: absolute;
        display: flex;
        align-items: center;
        justify-content: center;
        top: 50%;
        width: 40px;
        height: 40px;
        margin-top: -20px;
        color: #6c7781;
        cursor: pointer;
        background-color: #fff;
        border-radius: 50%;
        box-shadow: 0 0 7px 2px rgba(0, 0, 0, .04);
        opacity: .5;
        transition: .2s opacity ease-in-out, .2s box-shadow ease-in-out;
        will-change: opacity, box-shadow;
        z-index: 1;

        // additional element to make the buttons clickable also in outside.
        &::after {
            content: "";
            position: absolute;
            display: block;
            top: -10px;
            right: -10px;
            bottom: -10px;
            left: -10px;
        }

        &:hover {
            box-shadow: 0 2px 15px 2px rgba(0, 0, 0, .04);
            opacity: 1;
        }
    }
    .vp-portfolio__items-arrow-prev {
        left: 10px;
    }
    .vp-portfolio__items-arrow-next {
        right: 10px;
    }

    // bullets
    &[data-vp-slider-bullets="true"] .vp-portfolio__items-wrap {
        padding-bottom: 25px;

        .vp-portfolio__items-arrow {
            margin-top: -20px - 25px / 2px;
        }
    }
    .vp-portfolio__items-bullets {
        position: absolute;
        margin-bottom: -15px;
        text-align: center;
        z-index: 1;

        &.swiper-pagination-bullets-dynamic {
            margin-bottom: -7px;
        }

        > span {
            position: relative;
            cursor: pointer;
            background-color: #6c7781;
            opacity: .2;
            transition: .15s opacity ease-in-out;
            will-change: opacity;

            &:hover {
                opacity: .5;
            }
            &.swiper-pagination-bullet-active {
                opacity: 1;
            }

            // additional element to make the buttons clickable also in outside.
            &::after {
                content: "";
                position: absolute;
                display: block;
                top: -4px;
                right: -4px;
                bottom: -4px;
                left: -4px;
            }
        }
    }
}

// On loaded portfolio
.vp-portfolio.vp-portfolio__ready {
    min-height: initial;

    .vp-portfolio__items-wrap,
    .vp-portfolio__filter-wrap,
    .vp-portfolio__pagination-wrap {
        visibility: visible;
        opacity: 1;
    }
    .vp-portfolio__preloader-wrap {
        visibility: hidden;
        opacity: 0;

        .vp-portfolio__preloader {
            animation: none;
        }
    }
}
.vp-single-filter.vp-single-filter__ready {
    .vp-portfolio__filter-wrap {
        visibility: visible;
        opacity: 1;
    }
}

// Loading
.vp-portfolio.vp-portfolio__loading {
    &::before {
        content: "";
        position: absolute;
        display: block;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 1;
    }

    .vp-portfolio__items-wrap,
    .vp-portfolio__filter-wrap,
    .vp-portfolio__pagination-wrap {
        opacity: .5;
    }
}

// PhotoSwipe
.vp-portfolio__item-popup {
    display: none;
}
.vp-pswp {
    z-index: 1500;

    // fixed top position when WP admin bar showed.
    body.admin-bar & {
        top: 32px;
        height: calc(100% - 32px);

        @media screen and (max-width: 782px) {
            top: 42px;
            height: calc(100% - 42px);
        }
        @media screen and (max-width: 600px) {
            top: 0;
            height: 100%;
        }
    }

    .pswp__caption {
        background-color: rgba(0, 0, 0, .75);

        > div {
            max-width: 600px;
            font-size: 12px;
            color: #fff;
        }

        h3 {
            color: inherit;
        }

        a {
            color: inherit;

            &:hover {
                opacity: .8;
            }
        }
        .vp-portfolio__item-meta-title {
            margin-top: 0;
            margin-bottom: 3px;
            font-size: 14px;
            color: inherit;

            a {
                text-decoration: none;
            }
        }
    }

    .pswp__preloader {
        position: absolute;
        right: 0;
        bottom: 0;
        z-index: 1;
    }


    .vp-pswp-video {
        position: relative;
        display: flex;
        align-items: center;
        width: 100%;
        max-width: 1920px;
        height: 100%;
        margin: 0 auto;
        line-height: 0;
        text-align: left;
        vertical-align: middle;
        z-index: 1045;

        > div {
            position: relative;
            width: 100%;
            height: 0;
            padding-bottom: 56.25%;

            iframe {
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                margin: 0;
            }
            video {
                // stylelint-disable-next-line declaration-no-important
                width: 100% !important;
                // stylelint-disable-next-line declaration-no-important
                height: auto !important;
                margin: 0;
            }
        }
    }
}

// LazyLoad image
img.visual-portfolio-lazyload {
    opacity: 1;
    transition: .3s opacity;
    will-change: opacity;
}
.vp-portfolio__item-img::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: linear-gradient(-70deg, rgba(255, 255, 255, 0) 42%, rgba(255, 255, 255, .55) 50%, rgba(255, 255, 255, 0) 58%);
    background-color: rgba(132, 136, 177, .05);
    background-position: 0% 50%;
    background-size: 500% 100%;
    transition: .3s .3s opacity, .3s .3s visibility;
}
.vp-portfolio__item-img-lazyloading {
    &::before {
        visibility: visible;
        opacity: 1;
        transition: none;
        animation: vp-lazyload-placeholder 3s linear infinite;
    }

    img.visual-portfolio-lazyload {
        opacity: 0;
    }
}
@keyframes vp-lazyload-placeholder {
    0%,
    80% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

